--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Email Form</title>
-  <link rel="stylesheet" href="game/styles/stylesheet.css">
+  <link rel="stylesheet" href="/styles/stylesheet.css">
 </head>
     <body>
     
@@ -12,7 +12,7 @@
 
 function emailList(){
     var emailCollect = prompt("What's your email address?")
-    console.log("Thank you for signing up for our newsletter, !" + emailCollect)
+    console.log("Thank you for signing up for our newsletter, " + emailCollect)
 }   
        
 emailList()
