--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 function emailList(){
     var emailCollect = prompt("What's your email address?")
-    console.log("Thank you for signing up for our newsletter, !" + emailCollect)
+    console.log("Thank you for signing up for our newsletter, " + emailCollect)
 }   
        
 emailList()
